# cortex

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/agents/specchain/: frontend-verifier.md  spec-researcher.md  spec-verifier.md  spec-writer.md  tasks-list-creator.md  ui-designer.md
specchain/: config.yml
specchain/governance/: cursorrules.tmpl
specchain/product/: mission.md  roadmap.md  tech-stack.md
specchain/specs/2026-03-16-audio-transcription/: spec.md  tasks.md
specchain/specs/2026-03-16-capture-daemon/: spec.md  tasks.md
specchain/specs/2026-03-16-clipboard-history/: requirements.md  spec.md  tasks.md
specchain/specs/2026-03-16-embedding-search/: spec.md  tasks.md
specchain/specs/2026-03-16-local-ai-chat/: spec.md  tasks.md
specchain/specs/2026-03-16-meeting-memory/: requirements.md  spec.md  tasks.md
specchain/specs/2026-03-16-ocr-pipeline/: spec.md  tasks.md
specchain/specs/2026-03-16-retention-storage/: requirements.md  spec.md  tasks.md
specchain/specs/2026-03-16-search-ui/: spec.md  tasks.md
specchain/specs/2026-03-16-settings-preferences/: requirements.md  spec.md  tasks.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: accessibility.rs  audio.rs  capture.rs  chat.rs  clipboard.rs  config.rs  embedding.rs  embedding_worker.rs  lib.rs  meeting.rs  ocr.rs  ocr_worker.rs  permissions.rs  search.rs  storage.rs  summary.rs  tray.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/SwiftLib/: ocr.swift
src/routes/: +layout.svelte  +page.svelte
(+37 files in other folders)
