[package]
name = "cortex"
version = "0.1.0"
description = "Local-first screen capture and AI memory for macOS"
authors = ["Nino Chavez"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"

# Screen capture
screencapturekit = "1"

# Image encoding
webp = "0.3"

# SQLite
rusqlite = { version = "0.36", features = ["bundled"] }

# macOS APIs
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSNotification", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
active-win-pos-rs = "0.10"
block2 = "0.6"

# Audio transcription
whisper-rs = { version = "0.15", features = ["metal"] }
hound = "3.5"

# Swift bridge
swift-rs = "1.0"

# Utilities
chrono = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "6"
